fix: fix stuck hover state issue on Safari mobile

--- a/packages/autocomplete-theme-classic/src/theme.scss
+++ b/packages/autocomplete-theme-classic/src/theme.scss
@@ -703,9 +703,13 @@ body {
     display: flex;
     flex-shrink: 0;
     padding: 0;
-    &:hover svg,
-    &:focus svg {
-      color: rgba(var(--aa-text-color-rgb), var(--aa-text-color-alpha));
+    &:hover, &:focus {
+      svg {
+        color: rgba(var(--aa-text-color-rgb), var(--aa-text-color-alpha));
+        @media (hover: none) and (pointer: coarse) {
+          color: inherit;
+        }
+      }
     }
     svg {
       color: rgba(var(--aa-muted-color-rgb), var(--aa-muted-color-alpha));
@@ -713,10 +717,6 @@ body {
       margin: calc(var(--aa-spacing) / 3);
       stroke-width: var(--aa-icon-stroke-width);
       width: var(--aa-action-icon-size);
-      &:hover,
-      &:focus {
-        color: rgba(var(--aa-text-color-rgb), var(--aa-text-color-alpha));
-      }
     }
   }
 }
@@ -832,13 +832,13 @@ body {
     }
   }
   .aa-Panel {
-    flex-grow: 1;
     background-color: rgba(
       var(--aa-background-color-rgb),
       var(--aa-background-color-alpha)
     );
     border-radius: 0;
     box-shadow: none;
+    flex-grow: 1;
     margin: 0;
     padding: 0;
     position: relative;
